2006-01-15 Konstantin Triger <kostat@mainsoft.com>

	* Button.cs: Add semicolon after client script if does not exist.

2006-01-15 Konstantin Triger <kostat@mainsoft.com>

	* Button.cs: preserve user logic when adding client validation.

2006-01-15 Konstantin Triger <kostat@mainsoft.com>

	* BaseValidator.cs: fixing visibility bahavior

2006-01-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* RangeValidator.cs: allow empty data from the control. Patch from Marek
	Habersack that fixes bug #77239.

2006-01-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Calendar.cs: use the DateTimeFormatInfo from the current thread. Patch
	by Cyrille Colin. Closes bug #77184.

2006-01-08  Konstantin Triger <kostat@mainsoft.com>

	* PagedDataSource.cs, DataGrid.cs: TARGET_JVM changes to let the
	 compilation pass with csc 1.1.

2005-12-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DropDownList.cs: HtmlEncode the item text. Fixes bug #76949.

2005-12-07  Chris Toshok  <toshok@ximian.com>

	* BaseValidator.cs: in the uplevel rendering case, don't render
	the text if the validator's Display attribute is "None".  Should
	fix bug #76924.

2005-11-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* RadioButton.cs: if the 'value' attribute is set explicitly (as
	RadioButtonList does now), use that as the 'name' attribute.
	* RadioButtonList.cs: set the AutoPostBack and Enabled properties of
	the radiobuttons.

	Fixes bug #76706.

2005-11-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CheckBox.cs: add possible 'internal' attributes to the input tag. Fix
	the 'name' attribute when not aligninng to the right.
	* RadioButton.cs: use NameAttribute instead of GroupName when indexing
	the collection. Raise the OnCheckedChanged event. Fixes bug #76710.

2005-11-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataGrid.cs: clear the control collection on every call to
	CreateControlHierarchy. Fixes bug #76732.

2005-11-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>
